[package]
authors = ['ChainSafe Systems']
name = "runtime-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# substrate
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-bags-list = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-npos-elections = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

# polkadot
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }

# cumulus
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24", default-features = false }

# orml
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24', default-features = false }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24', default-features = false }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24', default-features = false }
orml-xtokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24', default-features = false }
orml-unknown-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'polkadot-v0.9.24', default-features = false }
orml-xcm-support = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'polkadot-v0.9.24', default-features = false }

# chainlink
pallet-chainlink-feed = { git = 'https://github.com/Sotatek-BaoHoang2/chainlink-polkadot', branch = 'polkadot-v0.9.24', default-features = false }

# pint
pallet-remote-asset-manager = { path = "../../pallets/remote-asset-manager", default-features = false }
pallet-asset-index = { path = "../../pallets/asset-index", default-features = false }
pallet-committee = { path = "../../pallets/committee", default-features = false }
pallet-price-feed = { path = "../../pallets/price-feed", default-features = false }
pallet-saft-registry = { path = "../../pallets/saft-registry", default-features = false }
shot-runtime = { path = "../shot", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }
xcm-calls = { path = "../../primitives/xcm-calls", default-features = false }

# others
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator.git", branch = "master", default-features = false }
env_logger = "0.9"

[features]
runtime-benchmarks = []
