[package]
authors = ['ChainSafe Systems']
name = "runtime-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ['derive', 'max-encoded-len'] }
scale-info = { version = "2.0.1", features = ["derive"] }

# substrate
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-bags-list = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-npos-elections = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

# polkadot
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }

# cumulus
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24' }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }

# orml
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24' }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24' }
orml-xtokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library',branch = 'polkadot-v0.9.24' }
orml-unknown-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'polkadot-v0.9.24' }
orml-xcm-support = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'polkadot-v0.9.24' }

# pint
pallet-remote-asset-manager = { path = "../../pallets/remote-asset-manager" }
pallet-asset-index = { path = "../../pallets/asset-index" }
pallet-committee = { path = "../../pallets/committee" }
pallet-price-feed = { path = "../../pallets/price-feed" }
pallet-saft-registry = { path = "../../pallets/saft-registry" }
shot-runtime = { path = "../shot" }
primitives = { path = "../../primitives/primitives" }
xcm-calls = { path = "../../primitives/xcm-calls" }

# others
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator.git", rev = "651af78d6d7521dc76e1f6bb257af485f8a454c7" }
env_logger = "0.9"

[features]
runtime-benchmarks = []
