[package]
authors = ['ChainSafe Systems']
description = 'Support for testing xcm within PINT.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'xcm-test-support'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
serde = { version = "1.0.101", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }


## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10'}
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }

# polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }

# orml
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

# pint
xcm-calls = { path = "../../primitives/xcm-calls" }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']