[package]
authors = ['ChainSafe Systems']
description = 'RPC for the asset-index pallet.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pallet-asset-index-rpc'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]

serde = { version = "1.0.130", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.26' }
sp-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.26' }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.26' }

# PINT RPC
pallet-asset-index-rpc-runtime-api = { path = "runtime-api" }

# PINT dependencies
primitives = { path = "../../../primitives/primitives", default-features = false }

[dev-dependencies]
serde_json = "1.0.69"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
