[package]
authors = ['ChainSafe Systems']
description = 'RPC runtime API for the asset-index pallet.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pallet-asset-index-rpc-runtime-api'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
serde = { version = "1.0.130", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# PINT dependencies
primitives = { path = "../../../../primitives/primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
    "primitives/std",
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
